feat: added target attribute for menu-items (#24)
