# src/main/java/org/tkit/onecx/workspace/api/legacy/rs/v1/mappers/UserMenuMapper.java
@@ -10,8 +10,10 @@ import org.mapstruct.*;
 import org.tkit.onecx.workspace.api.legacy.domain.config.ApiLegacyConfig;
 
 import gen.org.tkit.onecx.workspace.api.rs.legacy.v1.model.GetMenuItemsRequestDTOV1;
+import gen.org.tkit.onecx.workspace.api.rs.legacy.v1.model.TargetDTOV1;
 import gen.org.tkit.onecx.workspace.api.rs.legacy.v1.model.UserWorkspaceMenuItemDTOV1;
 import gen.org.tkit.onecx.workspace.api.rs.legacy.v1.model.UserWorkspaceMenuStructureDTOV1;
+import gen.org.tkit.onecx.workspace.user.client.model.Target;
 import gen.org.tkit.onecx.workspace.user.client.model.UserWorkspaceMenuItem;
 import gen.org.tkit.onecx.workspace.user.client.model.UserWorkspaceMenuRequest;
 import gen.org.tkit.onecx.workspace.user.client.model.UserWorkspaceMenuStructure;
@@ -61,5 +63,25 @@ public abstract class UserMenuMapper {
             url = url.substring(1);
         }
         return prefix + url;
+    }
+
+    public Target mapTarget(TargetDTOV1 targetDTO) {
+        if (targetDTO == null) {
+            return Target.SELF;
+        }
+        return switch (targetDTO) {
+            case _BLANK -> Target.BLANK;
+            case _SELF -> Target.SELF;
+        };
+    }
+
+    public TargetDTOV1 mapTarget(Target target) {
+        if (target == null) {
+            return TargetDTOV1._SELF;
+        }
+        return switch (target) {
+            case BLANK -> TargetDTOV1._BLANK;
+            case SELF -> TargetDTOV1._SELF;
+        };
     }
 }
